--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.80.0",
+    "@aws-cdk/aws-efs": "^1.80.0",
     "@aws-cdk/core": "1.79.0",
     "source-map-support": "^0.5.16"
   }
