--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-autoscaling": "^1.80.0",
     "@aws-cdk/aws-ec2": "^1.80.0",
     "@aws-cdk/aws-efs": "^1.80.0",
     "@aws-cdk/core": "1.79.0",
