--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@aws-cdk/aws-ec2": "^1.80.0",
     "@aws-cdk/aws-ecs": "^1.80.0",
     "@aws-cdk/aws-efs": "^1.80.0",
-    "@aws-cdk/core": "1.79.0",
+    "@aws-cdk/aws-lambda": "^1.80.0",
+    "@aws-cdk/core": "1.80.0",
     "source-map-support": "^0.5.16"
   }
 }
