--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-autoscaling": "^1.80.0",
-    "@aws-cdk/aws-ec2": "^1.80.0",
-    "@aws-cdk/aws-ecs": "^1.80.0",
-    "@aws-cdk/aws-efs": "^1.80.0",
-    "@aws-cdk/aws-lambda": "^1.80.0",
-    "@aws-cdk/core": "1.80.0",
+    "@aws-cdk/aws-autoscaling": "^1.81.0",
+    "@aws-cdk/aws-ec2": "^1.81.0",
+    "@aws-cdk/aws-ecs": "^1.81.0",
+    "@aws-cdk/aws-efs": "^1.81.0",
+    "@aws-cdk/aws-events": "^1.81.0",
+    "@aws-cdk/aws-events-targets": "^1.81.0",
+    "@aws-cdk/aws-iam": "^1.81.0",
+    "@aws-cdk/aws-lambda": "^1.81.0",
+    "@aws-cdk/core": "^1.81.0",
     "source-map-support": "^0.5.16"
   }
 }
