--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-cdk/aws-iam": "^1.81.0",
     "@aws-cdk/aws-lambda": "^1.81.0",
     "@aws-cdk/core": "^1.81.0",
+    "dotenv": "^8.2.0",
     "source-map-support": "^0.5.16"
   }
 }
